--- a/public/font.css
+++ b/public/font.css
@@ -12,3 +12,8 @@
     font-family: '迷你繁篆书';
     src: url("./font/迷你繁篆书.ttf");
 }
+
+@font-face {
+    font-family: '方正姚体';
+    src: url("./font/方正姚体.ttf");
+}
